force-app/main/default/objects/Account_Details__c/Account_Details__c.object-meta.xml
<CustomObject>
    <label>Account Detail</label>
    <nameField>
        <displayFormat>AD-{0000}</displayFormat>
        <label>Account Details ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>