force-app/main/default/objects/Account_Details__c/fields/Obs__c.field-meta.xml
<CustomField>
    <fullName>Obs__c</fullName>
    <label>Obs</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>