force-app/main/default/objects/Account_Details__c/fields/ORG_ID__c.field-meta.xml
<CustomField>
    <fullName>ORG_ID__c</fullName>
    <label>ORG ID</label>
    <length>24</length>
    <type>Text</type>
</CustomField>