force-app/main/default/objects/Account_Details__c/fields/Secret_answer__c.field-meta.xml
<CustomField>
    <fullName>Secret_answer__c</fullName>
    <label>Secret Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>