force-app/main/default/objects/Account_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Product__c</columns>
    <columns>URL__c</columns>
    <columns>User__c</columns>
    <columns>Password__c</columns>
    <columns>Secret_answer__c</columns>
    <columns>Token__c</columns>
    <columns>ORG_ID__c</columns>
    <columns>Obs__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>